<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Books Stock</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="Book_name_title">Book Name</string>
    <string name="price_title">Price</string>
    <string name="quantity_title">Quantity</string>
    <string name="supplier_phone_hint">e.g. +49 000-000-000</string>
    <string name="supplier_phone_title">Supplier Phone</string>
    <string name="supplier_name_hint">Candy Supplier GmbH</string>
    <string name="supplier_name_title">Supplier Name</string>
    <string name="select_image">Select image</string>
    <string name="image">Image</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
</resources>