<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shoker.myinventory.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_book_name_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Book_name_title" />

        <EditText
            android:id="@+id/et_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/et_price" />

        <TextView
            android:id="@+id/tv_price_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_title" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/tv_quantity_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_remove_black_24dp"
                android:onClick="decreaseQuantity"/>

            <EditText
                android:id="@+id/et_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_black_24dp"
                android:onClick="increaseQuantity"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_supplier_name_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name_title" />

        <EditText
            android:id="@+id/et_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_supplier_phone_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_title" />

        <EditText
            android:id="@+id/et_supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_phone_hint"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tv_image_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image" />

        <Button
            android:id="@+id/btn_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

</ScrollView>
